# model_selection_evaluation

./: .gitignore  Dockerfile  LICENSE  README.md  config.yml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
notebooks/: ensembles.ipynb
src/09_model_selection_evaluation/data/: generate_eda.py  get_dataset.py
src/09_model_selection_evaluation/models/: random_forest train.py
src/cover_type_classifier/api/: app.py
src/cover_type_classifier/data/: custom_estimator.py  feature_engineering.py  generate_eda.py  get_dataset.py
src/cover_type_classifier/deployment/: app.py
src/cover_type_classifier/models/: knn_train.py  predict.py  random_forest_train.py  train_models.py
tests/: conftest.py  test_app.py  test_data.py  test_model.py
