[tool.poetry]
name = "09_model_selection_evaluation"
version = "0.1.0"
description = "Capstone project RS School ML Course 2022"
authors = ["Victoria Lebedeva"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
click = "^8.1.2"
sweetviz = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
