[tool.poetry]
name = "cover_type_classifier"
version = "0.1.0"
description = "Capstone project RS School ML Course 2022"
authors = ["Victoria Lebedeva"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.3.5"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
click = "^8.1.2"
sweetviz = "^2.1.3"
pandas-profiling = "^3.1.0"
mlflow = "^1.25.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.950"
nox = "^2022.1.7"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.poetry.scripts]
generate-eda = "src.cover_type_classifier.data.generate_eda:generate_eda"
knn-train = "src.cover_type_classifier.models.knn_train:train"
rf-train = "src.cover_type_classifier.models.random_forest_train:train"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
