[tool.poetry]
name = "cover_type_classifier"
version = "0.1.0"
description = "Capstone project RS School ML Course 2022"
authors = ["Victoria Lebedeva <vict1464@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.3.5"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
click = "^8.1.3"
sweetviz = "^2.1.4"
pandas-profiling = "^3.2.0"
mlflow = "^1.26.1"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.961"
nox = "^2022.1.7"

[tool.black]
line-length = 79

[tool.poetry.scripts]
generate-eda = "src.cover_type_classifier.data.generate_eda:generate_eda"
knn-train = "src.cover_type_classifier.models.train_models:knn_train"
rf-train = "src.cover_type_classifier.models.train_models:random_forest_train"
app = "src.cover_type_classifier.deployment.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
